--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     ],
     "require": {
         "fico7489/laravel-pivot": "*",
-        "illuminate/cache": "5.4 - 5.6",
-        "illuminate/config": "5.4 - 5.6",
-        "illuminate/console": "5.4 - 5.6",
-        "illuminate/database": "5.4 - 5.6",
-        "illuminate/support": "5.4 - 5.6",
+        "illuminate/cache": "*",
+        "illuminate/config": "*",
+        "illuminate/console": "*",
+        "illuminate/database": "*",
+        "illuminate/support": "*",
         "php": ">=7.1.3"
     },
     "require-dev": {
